[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/InteractiveConsole.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/MainDialog/DialogPageSelector.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/ships/ShipDesignView.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/MainDialog/DialogShipPanel.gd" type="Script" id=4]
[ext_resource path="res://ui/FontResizer.tscn" type="PackedScene" id=5]

[node name="DialogShipPanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Split" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="GridContainer" parent="Split"]
margin_right = 609.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogPageSelector" parent="Split/Left" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 609.0
margin_bottom = 20.0
enable_Ship = false

[node name="Consoles" type="VSplitContainer" parent="Split/Left"]
margin_top = 24.0
margin_right = 609.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Info" parent="Split/Left/Consoles" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 609.0
margin_bottom = 432.0
follow_urls = false
allow_input = false

[node name="Help" parent="Split/Left/Consoles" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 444.0
margin_right = 609.0
margin_bottom = 876.0

[node name="Ship" parent="Split" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 621.0
margin_right = 1600.0
margin_bottom = 900.0
focus_mode = 2
size_flags_stretch_ratio = 1.6

[node name="FontResizer" parent="." instance=ExtResource( 5 )]

[connection signal="page_selected" from="Split/Left/DialogPageSelector" to="." method="_on_DialogPageSelector_page_selected"]
[connection signal="url_clicked" from="Split/Left/Consoles/Info" to="." method="_on_Info_url_clicked"]
[connection signal="select_item" from="Split/Ship" to="." method="_on_Ship_select_item"]
